# markdown-rag-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  pyproject.toml
.claude/: settings.json  settings.local.json
.specify/memory/: constitution.md
docker/: docker-compose.yml
examples/: file_monitoring_demo.py  markdown_parsing_demo.py
specs/001-markdown-rag-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-markdown-rag-system/checklists/: requirements.md
specs/001-markdown-rag-system/contracts/: cli-interface.md  library-api.md
src/markdown_rag_mcp/config/: __init__.py  settings.py
src/markdown_rag_mcp/core/: __init__.py  interfaces.py
src/markdown_rag_mcp/embeddings/: __init__.py  embedder.py  langchain_adapter.py
src/markdown_rag_mcp/models/: __init__.py  document.py  exceptions.py  query.py
src/markdown_rag_mcp/monitoring/: __init__.py  file_watcher.py  monitoring_coordinator.py
src/markdown_rag_mcp/parsers/: __init__.py  frontmatter_parser.py  markdown_parser.py
src/markdown_rag_mcp/search/: __init__.py  query_processor.py
src/markdown_rag_mcp/storage/: __init__.py  milvus_store.py
tests/unit/embeddings/: __init__.py  test_embedder.py  test_langchain_adapter.py
tests/unit/models/: __init__.py  test_document.py  test_query.py
tests/unit/monitoring/: __init__.py  test_file_watcher.py  test_monitoring_coordinator.py
tests/unit/parsers/: __init__.py  test_frontmatter_parser.py  test_markdown_parser.py
tests/unit/search/: __init__.py  test_query_processor.py
tests/unit/storage/: __init__.py  test_milvus_store.py
